crates/swc/tests/errors/module/esnext/import-assign/input.ts
import homura = require("homura");

export import madoka = require("madoka");
